fixed navbar overflow problem

--- a/Los Mal/impressum.css
+++ b/Los Mal/impressum.css
@@ -17,7 +17,7 @@ caption {
 }
 
 th, td {
-    padding: 15px;
+    padding: 7px;
     text-align: left;
 }
 tr:nth-child(even) {
